--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -3,9 +3,12 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a class="nm text-white" href=" ">Benard Akaka</a>View My Github Account.
+      <p><i><b>Visit my Github Account</b></i></p>
+      <a class="nm text-white" href="https://github.com/Benardakaka ">Benard Akaka</a>
+
+
     </div>
-    
+    <!-- Copyright -->
   
   </footer>
   <!-- Footer -->
