--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,13 +6,18 @@
 </head>
 {% block content %}
 <div class="wrapper">
+  
   <div style="text-align:center; font-size:30px;">
     <span
       style="font-size:100px;font-family: 'Special Elite', cursive; text-align:center;"
       class="text-primary"><p><marquee behaviour="scroll" width="1300px" height="px" color="white" style="color: crimson;font-size: larger;"> 
-            <strong><i><b>Hello, "Welcome to the Pitches ". by Benard Akaka</b></i></strong></marquee><link rel="stylesheet" href="">
+            <strong><i><b>Hello, "Welcome to the Blogs ". by Benard Akaka</b></i></strong></marquee><link rel="stylesheet" href="">
     </p></span>
   </div>
+
+  <div class="jumbotron">
+
+  
   <div class="quote"
     style=" font-size: larger;  text-align: center; margin-top: 5cm;">
     <p class="qq" style="font-family: 'Marck Script', cursive; font-size: xx-large;">{{quote.quote}}</p>
@@ -23,6 +28,6 @@
 <div class="container-fluid bg-primary" style="position: absolute;top: 100vh;">
   {% include 'footer.html'%}
 </div>
- 
+ </div>
 
   {% endblock %}
