--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -2,7 +2,7 @@
 {% import 'macros.html' as macro%}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
 
     <div class="row">
             <h3>Blog ID:{{ found_blog.id }}</h3>
