--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
-<div class="container ">
+<div class="container-fluid ">
     <div class="page-header">
         {% if category %}
      <h1> {{ category | upper }} blogs </h1>
