--- a/app/templates/display_comment_macro.html
+++ b/app/templates/display_comment_macro.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% macro display_comments(comments) %}
 <div class="mt-5">
+    <div class="container-fluid">
     <h1 class="text-center">Comments</h1>
     {% for comment in comments %}
     <img class="rounded-circle article-img"
@@ -8,5 +9,6 @@
     <a class="mr-2 commentname" href="#">Comment by: {{ comment.author.username }}</a>
     <p class="mt-10 mr-2 commentcomment">Comment: {{comment.comment}}</p>
     {% endfor %}
+</div>
 </div>
 {% endmacro %}
