--- a/app/templates/comments.html
+++ b/app/templates/comments.html
@@ -3,7 +3,7 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="page-header">
         <h1>Comments </h1>
     </div>
