--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,4 +1,5 @@
 <!-- Footer -->
+<div class="container-fluid">
 <footer class="page-footer font-small blue">
 
     <!-- Copyright -->
@@ -11,4 +12,5 @@
     <!-- Copyright -->
   
   </footer>
+</div>
   <!-- Footer -->
