--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,33 +1,57 @@
 {% extends 'base.html'%}
 <!DOCTYPE html>
 
-<head>
-
-</head>
+<head> </head>
 {% block content %}
-<div class="wrapper">
-  
-  <div style="text-align:center; font-size:30px;">
-    <span
-      style="font-size:100px;font-family: 'Special Elite', cursive; text-align:center;"
-      class="text-primary"><p><marquee behaviour="scroll" width="1300px" height="px" color="white" style="color: crimson;font-size: larger;"> 
-            <strong><i><b>Hello, "Welcome to the Blogs ". by Benard Akaka</b></i></strong></marquee><link rel="stylesheet" href="">
-    </p></span>
+<div class="container-fluid">
+  <div class="wrapper">
+    <div style="text-align: center; font-size: 30px">
+      <span
+        style="
+          font-size: 100px;
+          font-family: 'Special Elite', cursive;
+          text-align: center;
+        "
+        class="text-primary"
+        ><p>
+          <marquee
+            behaviour="scroll"
+            width="1300px"
+            height="px"
+            color="white"
+            style="color: crimson; font-size: larger"
+          >
+            <strong
+              ><i
+                ><b>Hello, "Welcome to the Blogs ". by Benard Akaka</b></i
+              ></strong
+            ></marquee
+          ><link rel="stylesheet" href="" /></p
+      ></span>
+    </div>
+
+    <div class="jumbotron">
+      <div
+        class="quote"
+        style="font-size: larger; text-align: center; margin-top: 5cm"
+      >
+        <p
+          class="qq"
+          style="font-family: 'Marck Script', cursive; font-size: xx-large"
+        >
+          {{quote.quote}}
+        </p>
+        <hr class="my-4" />
+        <p>Author:- {{quote.author}}</p>
+      </div>
+
+      <div
+        class="container-fluid bg-primary"
+        style="position: absolute; top: 100vh"
+      >
+        {% include 'footer.html'%}
+      </div>
+    </div>
   </div>
-
-  <div class="jumbotron">
-
-  
-  <div class="quote"
-    style=" font-size: larger;  text-align: center; margin-top: 5cm;">
-    <p class="qq" style="font-family: 'Marck Script', cursive; font-size: xx-large;">{{quote.quote}}</p>
-    <hr class="my-4">
-    <p>Author:- {{quote.author}}</p>
-  </div>
-
-<div class="container-fluid bg-primary" style="position: absolute;top: 100vh;">
-  {% include 'footer.html'%}
-</div>
- </div>
-
   {% endblock %}
+</div>
