--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -4,12 +4,14 @@
 
 {% block content%}
     <div class="container-fluid" style="font-family: 'Happy monkey', cursive;">
+        <div class="jumbotron">
         <a href="{{url_for('main.index')}}">
                 <button type="button" class="btn btn-primary btn-sm" style="margin-bottom:10px;">
                         <span class="glyphicon glyphicon-chevron-left" ></span> Back
                 </button>
         </a>
         {{wtf.quick_form(new_blog_form)}}
+    </div>
     </div>
 
 
