--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,6 +2,8 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
+<div class="container-fluid">
+<div class="jumbotron">
 <div class="row" style="margin-top: 3cm;">
   <div class="col-md-2"> </div>
   <div class="col-md-8">
@@ -18,6 +20,7 @@
   </div>
   <div clas="col-md-2"> </div>
 </div>
-
+</div>
+</div>
 
 {% endblock%}
