--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,7 +2,8 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<div class="container" style="margin-top: 3cm;">
+<div class="container-fluid" style="margin-top: 3cm;">
+  <div class="jumbotron">
 <div class="row">
 <div class="col-md-2"> </div>
 <div class="col-md-8">
@@ -13,7 +14,7 @@
 <div class="col-md-2"></div>
 </div>
 </div>
-
+</div>
 <div class="container-fluid bg-primary" style="margin-top: 6cm;">
     {% include 'footer.html'%}
   </div>
