--- a/app/templates/Profile/profile.html
+++ b/app/templates/Profile/profile.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container text-center ">
+<div class="container-fluid text-center ">
 <div class="userr">
 
 <div class="usr ">
