--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -6,13 +6,13 @@
       <div class="collapse navbar-collapse text-white" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="{{url_for('main.index')}}">Home</a>
+            <a class="nav-link text-white" href="{{url_for('main.index')}}"><button style="color: red;">Home</button></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="{{ url_for('main.blogs') }}">All Blogs</a>
+            <a class="nav-link text-white" href="{{ url_for('main.blogs') }}"><button style="color: red;">Blogs</button></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="{{ url_for('main.new_blog') }}"> Add New Blog</a>
+            <a class="nav-link text-white" href="{{ url_for('main.new_blog') }}"><button style="color: red;">Add your Blogs</button></a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -20,7 +20,7 @@
           <li><a href="{{ url_for('auth.login') }}" style="color: black;">Login</a></li>
           {% else %}
           <li><a href="{{ url_for('main.profile', uname=current_user.username) }}" style="color: cornsilk;">Profile</a></li>
-          <li><a href="{{ url_for('auth.logout') }}" style="color: cornsilk;">Logout</a></li>
+          <li><a href="{{ url_for('auth.logout') }}" style="color: cornsilk;"><Logout</a></li>
           {% endif %}
         </ul>
       </div>
